{
    "name": "CrosshairControls",
    "maps": [
        {
            "name": "CrosshairMovement",
            "id": "e3014ab5-a370-4362-8563-c9f48d2666d1",
            "actions": [
                {
                    "name": "MouseMovement",
                    "type": "Value",
                    "id": "dfd8db6a-49b4-4bee-a259-1ec4e7eaa1f5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JoystickMovement",
                    "type": "Value",
                    "id": "902cff2a-4593-4bd2-b559-e5598f80e439",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4937ce96-4ae9-49d4-919c-8703e094c388",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aba3f47-aa04-40cf-94e3-b21452131f2c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoystickMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}